Use tagged v0.0.1 CDN version for consistent testing

--- a/simulation-test.html
+++ b/simulation-test.html
@@ -78,8 +78,8 @@
     <h3>Execution Log:</h3>
     <div id="log" class="log">Waiting for simulation to start...</div>
 
-    <!-- Load PptxGenJS from CDN -->
-    <script src="https://cdn.jsdelivr.net/gh/sharmizan89/PptxGenJSMBAR@main/dist/pptxgen.bundle.js"></script>
+    <!-- Load PptxGenJS from CDN using tagged version for consistency -->
+    <script src="https://cdn.jsdelivr.net/gh/sharmizan89/PptxGenJSMBAR@v0.0.1/dist/pptxgen.bundle.js"></script>
     
     <script>
         const logEl = document.getElementById('log');
